# Image-Recognition-Project

./: .gitignore  .gitmodules  README.md  TrOCR.ipynb  TrOCR_train.py  classifier.ipynb  classifier_2_best_without_fine_tuning.ipynb  classifier_with_save_and_load_model.ipynb  demo.ipynb  fine_tuning.ipynb  log.txt  parse_equation.m  parse_equation_test.ipynb  pyproject.toml  requirements.txt  solving-math.ipynb
.ipynb_checkpoints/: TrOCR-checkpoint.ipynb  TrOCR_train-checkpoint.py
fine-tune-parsed-dataset/: x_test.npy  x_train.npy  y_test.npy  y_train.npy
models/model8432/: model8432 structure.txt
seq2seq_model_printed/runs/Feb07_23-13-18_RHIT-R90XZ2TQ/: events.out.tfevents.1707365611.RHIT-R90XZ2TQ.284.0
